WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276205
REGRESSION (
280591@main
?): imported/w3c/web-platform-tests/navigation-api/navigate-event/replaceState-inside-back-handler.html is constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=276205
Summary
REGRESSION (280591@main?): imported/w3c/web-platform-tests/navigation-api/nav...
Anfernee Viduya
Reported
2024-07-03 15:18:02 PDT
imported/w3c/web-platform-tests/navigation-api/navigate-event/replaceState-inside-back-handler.html is constantly failing on macOS and iOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2FreplaceState-inside-back-handler.html&platform=mac&platform=ios
DIFF: -CONSOLE MESSAGE: RangeError: Maximum call stack size exceeded. +CONSOLE MESSAGE: SecurityError: Attempt to use history.replaceState() more than 100 times per 10 seconds -Harness Error (FAIL), message = RangeError: Maximum call stack size exceeded. +Harness Error (FAIL), message = SecurityError: Attempt to use history.replaceState() more than 100 times per 10 seconds PASS replaceState inside a navigate event for navigation.back() LINK:
https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/280592@main%20(4525)/imported/w3c/web-platform-tests/navigation-api/navigate-event/replaceState-inside-back-handler-diff.txt
REGRESSION: In the
280591@main
, changes were made in WebCore/History navigation which might've caused the regression.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-03 15:18:13 PDT
<
rdar://problem/131080588
>
Anfernee Viduya
Comment 2
2024-07-03 16:30:31 PDT
REPRODUCIBILITY: I was able to reproduce this regression on ToT using the command, run-webkit-tests --root imported/w3c/web-platform-tests/navigation-api/navigate-event/replaceState-inside-back-handler.html
Anfernee Viduya
Comment 3
2024-07-03 16:42:20 PDT
It looks like
280591@main
regressed this but I am uncertain because that particular commit was not built.
Charlie Wolfe
Comment 4
2024-07-03 18:05:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30479
EWS
Comment 5
2024-07-05 13:33:42 PDT
Committed
280699@main
(6e0990321f04): <
https://commits.webkit.org/280699@main
> Reviewed commits have been landed. Closing PR #30479 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug