REGRESSION (280591@main): imported/w3c/web-platform-tests/navigation-api/navigate-event/replaceState-inside-back-handler.html is constantly failing. https://bugs.webkit.org/show_bug.cgi?id=276205 rdar://131080588

Reviewed by Pascoe.

In 280591@main I moved this if statement to be called after state on `mainHistory` was updated, which
caused this test to fail. Also use a smart pointer for `navigation`.

* Source/WebCore/page/History.cpp:
(WebCore::History::stateObjectAdded):

Canonical link: https://commits.webkit.org/280699@main